# Mat_report_generator

./: README.md  Tiger generator report - documentation.docx
src/: MainWindow.py  Mat_to_excel.py  PlotSelectionDialog.py  generate_results.py  names_config.json  plots.py  rosbag_reader.py  rosbag_reader_update.py  temp.html
src/Mat_files/: rosbag2_2024_01_16-13_35_16.mat  rosbag2_2024_01_16-16_25_43.mat  rosbag2_2024_01_17-11_05_02.mat
src/lar_interfaces/: CMakeLists.txt  README.md  package.xml
src/lar_interfaces/msg/: AdcData.msg  AttVn200.msg  BaData.msg  BmeData.msg  GnssVn200.msg  GuidanceData.msg  Imu.msg  InsStatus.msg  InsVn200.msg  JetMotorData.msg  Joystick.msg  MotorGuidance.msg  Parameter.msg  PidLog.msg  QgcMode.msg  ServoData.msg  Status.msg  TigerMode.msg  TimeSample.msg  TimeUtc.msg  Vector3.msg  Vn200Data.msg  Vn200DataNoFix.msg  VpeStatus.msg  Waypoint.msg  WaypointReached.msg  YprData.msg
src/lar_interfaces/srv/: GetParameters.srv  GetYprData.srv  Parameters.srv  SendAdcData.srv  SendBaData.srv  SendBmeData.srv  SendBmiData.srv  SendGPSData.srv  SetParameter.srv
src/rosbag_files/rosbag2_2022_12_20-11_10_57/: metadata.yaml  rosbag2_2022_12_20-11_10_57.mat  rosbag2_2022_12_20-11_10_57_0.db3
src/rosbag_files/rosbag2_2023_01_03-13_00_01/: metadata.yaml  rosbag2_2023_01_03-13_00_01.mat  rosbag2_2023_01_03-13_00_01_0.db3
src/rosbag_files/rosbag2_2023_01_03-13_02_57/: metadata.yaml  rosbag2_2023_01_03-13_02_57.mat  rosbag2_2023_01_03-13_02_57_0.db3
src/rosbag_files/rosbag2_2023_01_03-13_22_44/: metadata.yaml  rosbag2_2023_01_03-13_22_44.mat  rosbag2_2023_01_03-13_22_44_0.db3
src/rosbag_files/rosbag2_2023_01_03-13_23_14/: metadata.yaml  rosbag2_2023_01_03-13_23_14.mat  rosbag2_2023_01_03-13_23_14_0.db3
(+21 files in other folders)
